--- a/contact-us.html
+++ b/contact-us.html
@@ -1,91 +1,11 @@
 <!doctype html>
 <html class="no-js" lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>All the Ducks | About Us</title>
-    <link rel="stylesheet" href="css/foundation.css"/>
-    <link rel="stylesheet" href="css/atd.css"/>
-    <link rel="stylesheet" type="text/css" href="css/flaticon.css">
-    <script src="js/vendor/modernizr.js"></script>
-</head>
-<body>
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-48874971-1', 'alltheducks.com');
-    ga('send', 'pageview');
-
-</script>
-<div class="off-canvas-wrap">
-    <div class="inner-wrap">
-        <nav class="top-bar hide-for-small" data-topbar>
-            <ul class="title-area">
-                <li class="name">
-                    <h1><a href="/"><img src="img/alltheduck.svg"
-                                         style="height: 1.5em;width: auto;"> <b>All
-                        the Ducks</b></a></h1>
-
-                </li>
-            </ul>
-
-            <section class="top-bar-section">
-                <!-- Right Nav Section -->
-                <ul class="right">
-
-                    <li>
-                        <a href="services.html">Services</a>
-                    </li>
-                    <li>
-                        <a href="about-us.html">About Us</a>
-                    </li>
-                    <li>
-                        <a href="http://blog.alltheducks.com">Blog</a>
-                    </li>
-                    <li>
-                        <a href="contact-us.html">Contact Us</a>
-                    </li>
-                </ul>
-
-                <!-- Left Nav Section -->
-                <ul class="left">
-                </ul>
-            </section>
-        </nav>
-        <nav class="tab-bar show-for-small">
-            <section class="left-small">
-                <a class="left-off-canvas-toggle menu-icon"><span></span></a>
-            </section>
-
-            <section class="middle name tab-bar-section">
-                <h1><a href="/"><img src="img/alltheduck.svg"
-                                     style="height: 1.5em;width: auto;"><b>All
-                    the Ducks</b></a></h1>
-            </section>
-
-        </nav>
-        <aside class="left-off-canvas-menu">
-            <ul class="off-canvas-list">
-                <li>
-                    <a href="/">Home</a>
-                </li>
-                <li>
-                    <a href="services.html">Services</a>
-                </li>
-                <li>
-                    <a href="about-us.html">About Us</a>
-                </li>
-                <li>
-                    <a href="http://blog.alltheducks.com">Blog</a>
-                </li>
-                <li>
-                    <a href="contact-us.html">Contact Us</a>
-                </li>
-            </ul>
-        </aside>
+  <head>
+    {% include includes/headincludes.html %}
+    <title>All the Ducks | Contact Us</title>
+  </head>
+  <body>
+{% include includes/header.html%}
 
 
 
@@ -94,27 +14,61 @@
             <div class="large-12 columns">
                 <h2>Contact Us</h2>
 
-                <div class="row">
+
+
+                <div class="row" id="successmessage" style="display:none;">
+                    <div class="columns">
+                        <div data-alert class="alert-box info">
+                        Thanks for contacting us, your message has been successfully sent.  We'll get back to you soon.
+                        </div>
+                    </div>
+                </div>
+
+                <div id="failuremessage" class="row" style="display:none;">
+                    <div class="row">
+                        <div class="columns">
+                            <div data-alert class="alert-box warning">
+                              It appears something went wrong while trying to send your message.
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="columns"><a id="failuremailto" href="mailto:" class="button radius">Send with your Email Client</a></div>
+                    </div>
+                    <div class="row">
+                        <div class="columns">
+                            <h3>Your Message</h3>
+                            <div class="panel"><pre id="messagecopypaste"></pre></div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row" id="messageprogress" style="display:none;">
+                    <div class="columns"><h3>Sending Message</h3> <img src="img/ajax-loader.gif" />
+                    </div>
+                </div>
+
+                <div class="row" id="contactformpanel">
                     <div class="large-12 columns">
                         <form action="contact.php" method="POST" id="contactform">
                             <div class="row">
                                 <div class="medium-8 large-6 columns">
                                     <label>Name
-                                        <input name="name" type="text" placeholder="Mary Bloggs" />
+                                        <input name="name" id="personname" type="text" placeholder="Mary Bloggs" />
                                     </label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="medium-8 large-6 columns">
                                     <label>Email
-                                        <input name="email" type="text" placeholder="mbloggs@university.edu.au" />
+                                        <input name="email" id="email" type="text" placeholder="mbloggs@university.edu.au" />
                                     </label>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="medium-8 large-6 columns">
                                     <label>Phone/Mobile/Cell Number
-                                        <input name="phone" type="text" placeholder="0404 789 456" />
+                                        <input name="phone" id="phone" type="text" placeholder="0404 789 456" />
                                     </label>
                                 </div>
                             </div>
@@ -123,12 +77,12 @@
                             <div class="row">
                                 <div class="large-12 columns">
                                     <label>Your Question
-                                        <textarea name="question" placeholder="What can you do for me?" style="height: 13em;"></textarea>
+                                        <textarea name="question" id="question" placeholder="What can you do for me?" style="height: 13em;"></textarea>
                                     </label>
                                 </div>
                             </div>
 
-                            <a href="#" class="button radius" onclick="document.getElementById('contactform').submit();">Submit</a>
+                            <a href="#" class="button radius" id="submitFormButton">Submit</a>
                         </form>
                     </div>
                 </div>
@@ -137,16 +91,51 @@
 
 
 
-        <a class="exit-off-canvas"></a>
 
-    </div>
-</div>
+    
+{% include includes/footer.html %}
+<script type="text/javascript">
+    var atd = {};
+    atd.handleContactFormSubmit = function(e) {
+        var data = {};
+        var contactFormPanel = document.getElementById('contactformpanel');
+        var successMessage = document.getElementById('successmessage');
+        var failureMessage = document.getElementById('failuremessage');
+        var messageProgress = document.getElementById('messageprogress');
+        data.body = $('#question')[0].value;
+        data.email = $('#email')[0].value;
+        data.phone = $('#phone')[0].value;
+        data.name = $('#personname')[0].value;
 
+        contactformpanel.style.display = 'none';    
+        messageProgress.style.display = 'block';
+        $.post("http://127.0.0.1:8001/excusemeihaveaquestion", data, 
+            function(data) {
+                if (data.status == 'SUCCESS') {
+                    messageProgress.style.display = 'none';
+                    successMessage.style.display = 'block';
+                } else {
+                    var failureMailto = document.getElementById('failuremailto');
+                    failuremailto.href = 'mailto:wiley@alltheducks.com,shane@alltheducks.com?subject=Contact Form Question&body='+encodeURIComponent($('#question')[0].value);
+                    $('#messagecopypaste').text($('#question')[0].value)
 
-<script src="js/vendor/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
-<script>
-    $(document).foundation();
+                    messageProgress.style.display = 'none';
+                    failureMessage.style.display = 'block';
+                }
+            }).fail(function () {
+                var failureMailto = document.getElementById('failuremailto');
+                failuremailto.href = 'mailto:wiley@alltheducks.com,shane@alltheducks.com?subject=Contact Form Question&body='+encodeURIComponent($('#question')[0].value);
+                $('#messagecopypaste').text($('#question')[0].value);
+
+                messageProgress.style.display = 'none';
+                failureMessage.style.display = 'block';
+                
+            });
+
+        return false;
+    }
+
+    $('#submitFormButton').click(atd.handleContactFormSubmit);
 </script>
-</body>
+  </body>
 </html>
